# MyyOpenGLHelpers-example-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UnlimitedScrolling.kdev4  menu_parts.h  myy.c  myy_data.h  regen_assets.sh  shaders.h  tags
.kdev4/: UnlimitedScrolling.kdev4
data/: shaders.pack
shaders/: chars.txt  heatmap.frag  heatmap.vert  menu_forms.frag  menu_forms.vert  metadata.ini  shaders.h  shaders.pack  standard.frag  standard.vert  text.frag  text.vert  white_forms.frag  white_forms.vert
src/widgets/: common_types.h  menu_forms.c  menu_forms.h  simple_forms.c  simple_forms.h  stencil.c  stencil.h  text_area.c  text_area.h  text_buffer.c  text_buffer.h  text_edit_module.h
textures/: fonts_bitmap.myyraw  test_square.myyraw
tools/: .gitignore  CMakeLists.txt  RGB565  ShadersPacker.rb  ShadersPacker2.rb  bmp-converter.c  bmp-to-raw  bmp.h  font-pack-print.c  font-packer  font-packer.c  fonts.raw  fonts_bitmap.myyraw  myy_pack.h  pack_loader.c  pack_printer  pack_printer.c  shaders_pack.h  ugly_packer.rb  vector.c  vector.h
tools/code_generator/: main.c  pcre.c  test  test.c
